--- a/18-Day-Kaggle-Competition-Automobile/automobile-mutual-information.ipynb
+++ b/18-Day-Kaggle-Competition-Automobile/automobile-mutual-information.ipynb
@@ -3,17 +3,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Automobile Mutual Information\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Reference\n",
-    "\n",
-    "> [Mutual Information](https://www.kaggle.com/ryanholbrook/mutual-information)<br>\n",
-    "> [Data Source](https://www.kaggle.com/ryanholbrook/fe-course-data)\n",
-    "\n",
-    "---\n",
-    "\n",
+    "# Automobile Mutual Information\r\n",
+    "\r\n",
+    "---\r\n",
+    "\r\n",
+    "\r\n",
     "## Dependencies"
    ],
    "metadata": {}
@@ -22,15 +16,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.feature_selection import mutual_info_regression\n",
-    "\n",
-    "\n",
-    "plt.style.use(\"seaborn-whitegrid\")\n",
-    "\n",
+    "import numpy as np\r\n",
+    "import pandas as pd\r\n",
+    "import matplotlib.pyplot as plt\r\n",
+    "import seaborn as sns\r\n",
+    "from sklearn.feature_selection import mutual_info_regression\r\n",
+    "\r\n",
+    "\r\n",
+    "plt.style.use(\"seaborn-whitegrid\")\r\n",
+    "\r\n",
     "%load_ext autotime"
    ],
    "outputs": [
@@ -64,7 +58,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "df = pd.read_csv(\"data/autos.csv\")\n",
+    "df = pd.read_csv(\"data/autos.csv\")\r\n",
     "df.head()"
    ],
    "outputs": [
@@ -306,14 +300,14 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "X = df.copy()\n",
-    "y = X.pop(\"price\")\n",
-    "\n",
-    "# Label encoding for categoricals\n",
-    "for colname in X.select_dtypes(include=[\"object\"]):\n",
-    "    X[colname], _ = X[colname].factorize()\n",
-    "    \n",
-    "# All discrete features should now have integer dtypes (double-check this before using MI!)\n",
+    "X = df.copy()\r\n",
+    "y = X.pop(\"price\")\r\n",
+    "\r\n",
+    "# Label encoding for categoricals\r\n",
+    "for colname in X.select_dtypes(include=[\"object\"]):\r\n",
+    "    X[colname], _ = X[colname].factorize()\r\n",
+    "    \r\n",
+    "# All discrete features should now have integer dtypes (double-check this before using MI!)\r\n",
     "discrete_features = X.dtypes == int"
    ],
    "outputs": [
@@ -338,16 +332,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "from sklearn.feature_selection import mutual_info_regression\n",
-    "\n",
-    "def make_mi_scores(X, y, discrete_features):\n",
-    "    mi_scores = mutual_info_regression(X, y, discrete_features=discrete_features)\n",
-    "    mi_scores = pd.Series(mi_scores, name=\"MI Scores\", index=X.columns)\n",
-    "    mi_scores = mi_scores.sort_values(ascending=False)\n",
-    "    return mi_scores\n",
-    "\n",
-    "mi_scores = make_mi_scores(X, y, discrete_features)\n",
-    "#mi_scores[::3]  # show a few features with their MI scores\n",
+    "from sklearn.feature_selection import mutual_info_regression\r\n",
+    "\r\n",
+    "def make_mi_scores(X, y, discrete_features):\r\n",
+    "    mi_scores = mutual_info_regression(X, y, discrete_features=discrete_features)\r\n",
+    "    mi_scores = pd.Series(mi_scores, name=\"MI Scores\", index=X.columns)\r\n",
+    "    mi_scores = mi_scores.sort_values(ascending=False)\r\n",
+    "    return mi_scores\r\n",
+    "\r\n",
+    "mi_scores = make_mi_scores(X, y, discrete_features)\r\n",
+    "#mi_scores[::3]  # show a few features with their MI scores\r\n",
     "mi_scores"
    ],
    "outputs": [
@@ -415,16 +409,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "def plot_mi_scores(scores):\n",
-    "    scores = scores.sort_values(ascending=True)\n",
-    "    width = np.arange(len(scores))\n",
-    "    ticks = list(scores.index)\n",
-    "    plt.barh(width, scores)\n",
-    "    plt.yticks(width, ticks)\n",
-    "    plt.title(\"Mutual Information Scores\")\n",
-    "\n",
-    "\n",
-    "plt.figure(dpi=100, figsize=(8, 5))\n",
+    "def plot_mi_scores(scores):\r\n",
+    "    scores = scores.sort_values(ascending=True)\r\n",
+    "    width = np.arange(len(scores))\r\n",
+    "    ticks = list(scores.index)\r\n",
+    "    plt.barh(width, scores)\r\n",
+    "    plt.yticks(width, ticks)\r\n",
+    "    plt.title(\"Mutual Information Scores\")\r\n",
+    "\r\n",
+    "\r\n",
+    "plt.figure(dpi=100, figsize=(8, 5))\r\n",
     "plot_mi_scores(mi_scores)"
    ],
    "outputs": [
